feat(backend): actualizar variables de entorno y mejorar la estructura del código
